Updated host to from local to render
